--- a/src/index.css
+++ b/src/index.css
@@ -175,14 +175,14 @@ nav .menu-btn,
 
 #features {
   width: 100%;
-  height: 120vh;
+  min-height: auto;
+  padding: 80px 0;
   box-sizing: border-box;
   font-family: "Lato";
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 40px;
   background-color: #000000;
 }
 #features h1 {
@@ -253,24 +253,21 @@ nav .menu-btn,
   margin-top: 15px;
 }
 #presentaion {
-  padding-top: 30px;
   width: 100%;
-  height: 768px;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
+  min-height: 600px; /* menor que 768 */
+  padding: 40px 0; /* reduz espaço vertical */
   background-image: url(assets/offer.png);
-  text-align: center;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 
 .pr-heading {
   text-align: center;
   font-family: "Lato";
   width: 600px;
-  position: absolute;
-  left: 50%;
-  top: 55%;
-  transform: translate(-50%, -55%);
+  margin: 0 auto; /* centraliza horizontalmente */
+  padding-top: 100px; /* adiciona espaço superior */
 }
 .pr-heading span {
   color: #ff1414;
@@ -280,12 +277,12 @@ nav .menu-btn,
   color: #c5c5c5;
 }
 .pr-heading .details {
-  font-size: 1.2rem;
+  margin: 0 0 24px 0;
 }
 .pr-heading h1 {
   font-family: "Lato";
   font-size: 4rem;
-  margin: 0px;
+  margin: 0 0 16px 0;
   letter-spacing: 2px;
   color: #ffffff;
 }
@@ -314,21 +311,18 @@ nav .menu-btn,
 }
 
 #about {
-  margin-top: 100px;
-  width: 100%;
-  height: 120vh;
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 5% 0px 5%;
-  position: relative;
+  gap: 60px; /* 🔥 espaço real entre texto e imagem */
+  padding: 80px 8%;
 }
 
 .about-text {
   width: 45%;
   color: #fff;
-  list-style: circle;
+  padding-right: 40px;
+  max-width: 500px;
 }
 .about-text h1 {
   font-size: 3rem;
@@ -362,7 +356,8 @@ nav .menu-btn,
   width: 50%;
 }
 .about-image img {
-  width: 600px;
+  max-width: 100%;
+  height: auto;
 }
 
 #contact {
@@ -495,7 +490,9 @@ nav .menu-btn,
     margin-top: 0px;
   }
   .about-text {
-    width: 90%;
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
   }
   .about-text h1 {
     font-size: 4rem;
