--- a/src/index.css
+++ b/src/index.css
@@ -351,6 +351,10 @@ button {
   gap: var(--space-md);
 }
 
+.navbar__nav a {
+  text-decoration: none;
+}
+
 /* BOTÕES DO MENU */
 .btn-nav {
   font-size: 1rem;
